--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "vant": "^4.6.4",
     "vue": "^3.3.4",
     "vue-router": "4"
